--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
+		<version>3.0.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.tienda</groupId>
@@ -16,65 +16,64 @@
 	<properties>
 		<java.version>19</java.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-                </dependency>
-                <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-test</artifactId>
-                    <scope>test</scope>
-                </dependency>
-                <dependency>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-data-jpa</artifactId>
-                </dependency>
-                <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-security</artifactId>
-                </dependency>
-                <dependency>
-                    <groupId>org.thymeleaf.extras</groupId>
-                    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-                </dependency>
-                <dependency>            
-                    <groupId>org.webjars</groupId>            
-                    <artifactId>bootstrap</artifactId>            
-                    <version>5.1.3</version>        
-                </dependency>        
-                <dependency>            
-                    <groupId>org.webjars</groupId>            
-                    <artifactId>font-awesome</artifactId>            
-                    <version>5.15.4</version>        
-                </dependency>        
-                <dependency>            
-                    <groupId>org.webjars</groupId>            
-                    <artifactId>webjars-locator</artifactId>            
-                    <version>0.46</version>        
-                </dependency>
-	</dependencies>
+        <dependencies>        
+            <dependency>            
+                <groupId>org.springframework.boot</groupId>            
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.springframework.boot</groupId>            
+                <artifactId>spring-boot-starter-web</artifactId>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.springframework.boot</groupId>            
+                <artifactId>spring-boot-devtools</artifactId>            
+                <scope>runtime</scope>            
+                <optional>true</optional>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.projectlombok</groupId>            
+                <artifactId>lombok</artifactId>            
+                <optional>true</optional>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.springframework.boot</groupId>            
+                <artifactId>spring-boot-starter-test</artifactId>            
+                <scope>test</scope>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.springframework.boot</groupId>            
+                <artifactId>spring-boot-starter-data-jpa</artifactId>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.springframework.boot</groupId>            
+                <artifactId>spring-boot-starter-security</artifactId>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.thymeleaf.extras</groupId>            
+                <artifactId>thymeleaf-extras-springsecurity6</artifactId>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.webjars</groupId>            
+                <artifactId>bootstrap</artifactId>            
+                <version>5.1.3</version>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.webjars</groupId>            
+                <artifactId>font-awesome</artifactId>            
+                <version>5.15.4</version>        
+            </dependency>        
+            <dependency>            
+                <groupId>org.webjars</groupId>            
+                <artifactId>webjars-locator</artifactId>            
+                <version>0.46</version>        
+            </dependency>        
+            <dependency>            
+                <groupId>com.mysql</groupId>            
+                <artifactId>mysql-connector-j</artifactId>            
+                <scope>runtime</scope>        
+            </dependency>    
+        </dependencies>
 
 	<build>
 		<plugins>
