--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.sql=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 
+#Semana 13
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout=900
